Upgrade build script to use JDK 21
Provides a compatible JDK environment if the local JDK version doesn't meet the requirements.